--- a/PinBoardFront/src/app/board/board.component.html
+++ b/PinBoardFront/src/app/board/board.component.html
@@ -1,20 +1,26 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-sm column" (cdkDropListDropped)="drop($event)" cdkDropList>
+    <div class="col-sm column" cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"(cdkDropListDropped)="drop($event)">
 
-      <div class="card bg-light mb-3" *ngFor="let story of stories" cdkDrag>
-        <div class="card-header">{{story.title}}</div>
+      <div class="card bg-light mb-3" *ngFor="let item of todo" cdkDrag>
+        <div class="card-header">{{item.title}}</div>
         <div class="card-body">
           <h5 class="card-title">Light card title</h5>
-          <p class="card-text">{{story.content}}</p>
+          <p class="card-text">{{item.content}}</p>
         </div>
       </div>
 
     </div>
 
-    <div class="col-sm column">
-
+    <div class="col-sm column" cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]" (cdkDropListDropped)="drop($event)">
+      <div class="card bg-light mb-3" *ngFor="let item of done" cdkDrag>
+        <div class="card-header">{{item.title}}</div>
+        <div class="card-body">
+          <h5 class="card-title">Light card title</h5>
+          <p class="card-text">{{item.content}}</p>
+        </div>
+      </div>
     </div>
 
     <div class="col-sm">
