--- a/PinBoardFront/src/app/board/board.component.less
+++ b/PinBoardFront/src/app/board/board.component.less
@@ -1,15 +1,14 @@
 .column{
     min-width: 100px;
     padding-top: 15px;  
-    background-color: gainsboro;
 }
 
 .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.5),
+                // 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                // 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
   
 /* Animate items as they're being sorted. */
@@ -25,3 +24,11 @@
   .cdk-drag-placeholder {
     opacity: 0;
   }
+
+.card{
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 
+              0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
+              0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+  border: 0px solid rgba(0,0,0,.125);
+}
