--- a/FrontEnd/src/app/board/components/board/board.component.html
+++ b/FrontEnd/src/app/board/components/board/board.component.html
@@ -1,12 +1,22 @@
-<mat-toolbar color='primary'>Pin Board</mat-toolbar>
+<mat-toolbar color='primary'>
+  Pin Board
+  <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Item 1</button>
+  <button mat-menu-item>Item 2</button>
+</mat-menu>
+</mat-toolbar>
 
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm">
       <mat-card>
         <mat-card-title>Some title</mat-card-title>
-        <mat-divider></mat-divider>
-        <mat-card-subtitle>2nd title</mat-card-subtitle>
+        <mat-card-subtitle>
+        <mat-chip-list>
+          <mat-chip>epic name</mat-chip>
+        </mat-chip-list>
+        </mat-card-subtitle>
         <mat-card-content>Text Text Text Text Text Text Text Text Text </mat-card-content>
       </mat-card>
       
