--- a/FrontEnd/src/app/board/components/board/board.component.html
+++ b/FrontEnd/src/app/board/components/board/board.component.html
@@ -9,26 +9,22 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm" cdkDropList #toDo="cdkDropList" [cdkDropListData]="stories" [cdkDropListConnectedTo]="[inProgress]" (cdkDropListDropped)="drop($event)">
-      <div *ngIf="st === 'to-do'">
-        <mat-card *ngFor="let item of stories" cdkDrag>
+    <div class="col-sm" cdkDropList #toDoColumn="cdkDropList" [cdkDropListData]="toDo"
+      [cdkDropListConnectedTo]="[inProgressColumn]" (cdkDropListDropped)="drop($event)">
+      <mat-card *ngFor="let item of toDo" cdkDrag>
+        <mat-card-title>{{item.title}}</mat-card-title>
+        <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
+        <mat-card-content>{{item.content}}</mat-card-content>
+      </mat-card>
+
+    </div>
+    <div class="col-sm" cdkDropList #inProgressColumn="cdkDropList" [cdkDropListData]="inProgress"
+      [cdkDropListConnectedTo]="[toDoColumn]" (cdkDropListDropped)="drop($event)">
+      <mat-card *ngFor="let item of inProgress" cdkDrag>
           <mat-card-title>{{item.title}}</mat-card-title>
           <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
           <mat-card-content>{{item.content}}</mat-card-content>
         </mat-card>
-      </div>
-
-    </div>
-    <div class="col-sm" cdkDropList #inProgress="cdkDropList" [cdkDropListData]="stories" [cdkDropListConnectedTo]="[toDo]" (cdkDropListDropped)="drop($event)">
-      <mat-card cdkDrag>
-        <mat-card-title>Some title</mat-card-title>
-        <mat-card-subtitle>
-          <mat-chip-list>
-            <mat-chip>epic name</mat-chip>
-          </mat-chip-list>
-        </mat-card-subtitle>
-        <mat-card-content>Text Text Text Text Text Text Text Text Text </mat-card-content>
-      </mat-card>
     </div>
     <div class="col-sm">
 
